Fixes box-sizing for absolutely positioned elements. b=67690 r=waterson (and buster R.I.P), sr=hyatt